Error handling, Logging macros and CMake Debug/Release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,19 @@ add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 
 
+# Check the build type
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    # Define functions for Debug mode
+    target_compile_definitions(MyExecutable PRIVATE gvDEBUG)
+    message("Building in Debug mode.")
+elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
+    # Define functions for Release mode
+    target_compile_definitions(MyExecutable PRIVATE gvRELEASE)
+    message("Building in Release mode.")
+else()
+    message(FATAL_ERROR "Unknown build type. Set CMAKE_BUILD_TYPE to Debug or Release.")
+endif()
+
 
 # Optionally, you can set additional compiler flags
 # For example, enabling warnings
