new pygerber files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,13 @@ set(HEADERS
   include/Settings.h 
   include/Aperture.h 
   include/Expression.h
-)
+  
+  include/Instructions/Instruction.h
+  include/Instructions/SelectInstruction.h
+  include/Instructions/DCodes/DrawInstruction.h 
+  include/Instructions/DCodes/FlashInstruction.h 
+  include/Instructions/DCodes/MoveInstruction.h
+  )
 
 
 # Source files
