Custom Gerber Viewer(QGraphicsView) class.

--- a/GerberViewer/GerberViewerGUIinQT/GerberViewer/CMakeLists.txt
+++ b/GerberViewer/GerberViewerGUIinQT/GerberViewer/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(GerberViewerQT VERSION 0.1 LANGUAGES CXX)
+project(GerberViewer VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -20,37 +20,38 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(GerberViewerQT
+    qt_add_executable(GerberViewer
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET GerberViewerQT APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET GerberViewer APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(GerberViewerQT SHARED
+        add_library(GerberViewer SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(GerberViewerQT
+        add_executable(GerberViewer
             ${PROJECT_SOURCES}
+            custom_view.h custom_view.cpp
         )
     endif()
 endif()
 
-target_link_libraries(GerberViewerQT PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(GerberViewer PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.GerberViewerQT)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.GerberViewer)
 endif()
-set_target_properties(GerberViewerQT PROPERTIES
+set_target_properties(GerberViewer PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -59,12 +60,12 @@ set_target_properties(GerberViewerQT PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS GerberViewerQT
+install(TARGETS GerberViewer
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(GerberViewerQT)
+    qt_finalize_executable(GerberViewer)
 endif()
